--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load crispy_forms_tags %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,7 +21,7 @@
             <div class="login-form shadow">
                <form method="post">
                     {% csrf_token %}
-                    {{ form|crispy }}
+                    {{ form }}
                     <div class="text-right">
                          <button type="submit" class="btn btn-sm mt-3 w-25" style="background-color: #285843; color: white">Login</button>
 {#                         <button class="btn mt-2 btn-sm ms-2 w-25" style="background-color: #5D4954;"><a href="{% url 'signup' %}" class="text-decoration-none text-light">Sign Up</a></button>#}
