--- a/templates/workflows.html
+++ b/templates/workflows.html
@@ -1,9 +1,10 @@
 {% extends 'base.html'%}
-{% block content %}
-<header>
-  <h2>Workflows</h2>
-</header>
 
+{% block page-nav-workflows %}
+active
+{% endblock page-nav-workflows %}
+
+{% block content %}
 <section id="workflow-table">
   <table>
     <thead> <tr>
