overhauled dashboard UI

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,3 +1,8 @@
 {% extends 'base.html' %}
+
+{% block page-nav-dashboard %}
+active
+{% endblock page-nav-dashboard %}
+
 {% block content %}
 {% endblock content %}
