--- a/templates/workflow_info.html
+++ b/templates/workflow_info.html
@@ -6,7 +6,7 @@ active
 
 {% block content %}
 <section>
-  <h2>
+  <h2 class="page-title" style="margin-bottom: 0;">
     Workflow: {{workflow.workflow_id}}
     {% if specific_version %}
     (version {{workflow.version}})
@@ -18,12 +18,14 @@ active
   {% else %}
     <a href="{% url 'editor' %}?workflow={{workflow.workflow_id}}">Open in editor</a>
   {% endif %}
+
+  {% if not specific_version %}
+  <h3>Versions</h3>
+  {% endif %}
 </section>
 
 {% if not specific_version %}
-<section id="versions">
-  <h3>Versions</h3>
-
+<section class="card" id="versions">
   <table>
     <thead> <tr>
       <th scope="col">Version</th>
@@ -44,7 +46,7 @@ active
         <td>{{ wflow.created_by }}</td>
         <td>{{ wflow.time_created }}</td>
         <td>{{ wflow.num_patients }}</td>
-        <td> <a href="">View</a> </td>
+        <!-- <td> <a href="">View</a> </td> -->
       </tr>
       {% endfor %}
     </tbody>
@@ -59,8 +61,10 @@ active
 {% endif %}
 
 <section>
-  <h3>Collected data</h3>
+  <h3>Collected Data</h3>
+</section>
 
+<section class="card">
   <table>
     <thead> <tr>
       <th scope="col">Workflow version</th>
