--- a/templates/workflows.html
+++ b/templates/workflows.html
@@ -5,7 +5,13 @@ active
 {% endblock page-nav-workflows %}
 
 {% block content %}
-<section id="workflow-table">
+<section>
+  <h2 class="page-title">
+    All Workflows
+  </h2>
+</section>
+
+<section class="card" id="workflow-table">
   <table>
     <thead> <tr>
       <th scope="col">Workflow ID</th>
