--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,10 +4,10 @@ body {
 
     --alrite-rgb: 111, 195, 135;
     --alrite-green: #6FC387;
-  
+
     --light-green: #E5F1E8;
     --dark-green: #27442F;
-  
+
     --light-border: #E2E2E2;
     --dark-border: #909090;
     --light-background: #FBFBFB;
@@ -15,23 +15,27 @@ body {
     --warning-orange: #ED6F2E;
 }
 
+body.do-transition {
+    transition: background-color 0.5s ease;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
 }
 
-main, body > footer {
-    margin: 32px 8px 8px;
+body>footer {
+    margin: 8px;
 }
 
 section {
-    margin: 15px;
+    margin: 10px;
 }
 
 details summary {
     cursor: pointer;
 }
 
-summary > * {
+summary>* {
     display: inline;
 }
 
@@ -61,28 +65,57 @@ a:hover {
 
 table {
     width: 100%;
-    border-collapse: collapse;
-    border: 3px solid black;
+    border-spacing: 0;
+    /* border-collapse: collapse; */
 }
 
-th, td {
+th,
+td {
     padding: 5px;
-    border: 2px solid black;
+    border: 1px solid var(--light-border);
 }
 
-#page-navigation {
+.do-transition th,
+.do-transition td {
+    transition: border 0.5s ease
+}
+
+table thead th:first-child {
+    border-top-left-radius: 7px;
+}
+
+table thead th:last-child {
+    border-top-right-radius: 7px;
+}
+
+table tbody:last-child tr:last-child td:first-child {
+    border-bottom-left-radius: 7px;
+}
+
+table tbody:last-child tr:last-child td:last-child {
+    border-bottom-right-radius: 7px;
+}
+
+.card {
     background-color: var(--light-background);
     border: 3px solid var(--light-border);
     border-radius: 10px;
+}
+
+.do-transition .card {
+    transition: border 0.5s ease, background-color 0.5s ease
+}
+
+#page-navigation {
     margin: 10px 10px;
     padding: 10px 15px;
-    
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-#page-navigation > span {
+#page-navigation>span {
     display: flex;
     flex-direction: row;
 }
@@ -101,18 +134,68 @@ th, td {
 .page-nav-item:hover {
     border: 3px solid var(--alrite-green);
     text-decoration: none;
-    border-radius: 7.5px;
+    border-radius: 6px;
 }
 
 .logo {
-    color: var(--alrite-green);
+    color: var(--alrite-green) !important;
     font-weight: 600;
     font-size: 30px;
     margin-left: 5px;
 }
 
-.page-header {
+.page-title {
     color: var(--near-black);
+}
+
+.util-button {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    bottom: 20px;
+    right: 20px;
+
+    cursor: pointer;
+    --bounce: cubic-bezier(.47, 1.64, .41, 1);
+    --no-over-bounce: cubic-bezier(.47, 1.48, .41, .8);
+    transition: transform 0.1s ease,
+        opacity 0.5s var(--bounce),
+        border 0.5s var(--bounce),
+        width 0.5s var(--bounce),
+        height 0.5s var(--no-over-bounce);
+    border: 2px solid transparent;
+    border-radius: 8px;
+}
+
+.util-button:hover {
+    border: 2px solid var(--alrite-green)
+}
+
+.util-button:active {
+    border: 2px solid var(--alrite-green);
+    transform: scale(0.95);
+}
+
+/* ========= */
+/* DARK MODE */
+
+body.darkMode {
+    background-color: var(--near-black);
+
+    --light-green: #27442F;
+    --dark-green: #E5F1E8;
+
+    --light-border: #7E7E7E;
+    --dark-border: #d1d1d1;
+    --light-background: #545454;
+
+    color: white;
+}
+
+.darkMode h1,
+.darkMode h2,
+.darkMode h3 {
+    color: white;
 }
 
 .hidden {
