validation refactor continued (broken in this version) validaiton and upload better error handling

--- a/templates/workflow_info.html
+++ b/templates/workflow_info.html
@@ -32,6 +32,7 @@ active
       <th scope="col">Created by</th>
       <th scope="col">Time created</th>
       <th scope="col">Number of Patients</th>
+      <th scope="col">Changes</th>
     </tr> </thead>
 
     <tbody>
