--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,40 +1,19 @@
-{% extends 'base_old.html' %}
-{% load static %}
-{% load crispy_forms_tags %}
+{% extends 'base.html' %}
+
+{% block page-nav-links %}
+  <a class="page-nav-item active" href="{% url 'register' %}">Sign Up</a>
+{% endblock page-nav-links %}
+
 {% block content %}
+  <section class="card center-col">
 
-     {% if user.is_authenticated %}
-        {% if request.user.is_admin %}
-
-            <div class="register">
-        <div class="register-div">
-            <div class="text-center">
-               <h4 class="create">Create Clinician</h4>
-            </div>
-            <div class="register-form shadow">
-                <form method="post">
-                    {% csrf_token %}
-                    {{ form|crispy }}
-                    <div class="text-right">
-                         <button type="submit" class="btn btn-sm mt-3 w-25" style="background-color: #285843; color: white">Create Clinician</button>
-{#                         <button class="btn mt-2 btn-sm ms-2 w-25" style="background-color: #5D4954;"><a href="{% url 'signup' %}" class="text-decoration-none text-light">Sign Up</a></button>#}
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-
-        {% else %}
-            <div class="content">
-                <div class="pags">
-                    <p>You are not authorized to access this page</p>
-                </div>
-            </div>
-
-
-        {% endif %}
-
-    {% endif %}
-
-
+    <h2 class="page-title">
+      Register
+    </h2>
+    <form method="post">
+      {% csrf_token %}
+      {{ form }}
+      <button type="submit">Register</button>
+    </form>
+  </section>
 {% endblock content %}
