--- a/templates/workflows.html
+++ b/templates/workflows.html
@@ -25,7 +25,7 @@ active
     <tbody>
       <tr>
         <td>
-          <details ontoggle="">
+          <details id="details_{{workflow.uid}}">
             <summary>
               <a href="{% url 'workflow-info' workflow_id=workflow.workflow_id %}">{{ workflow.workflow_id }}</a>
             </summary>
@@ -38,6 +38,27 @@ active
       </tr>
     </tbody>
 
+    <tbody id="extra_versions_{{workflow.uid}}" style="visibility: collapse">
+      {% for version in workflow.all_versions %}
+      <tr>
+        <td>
+          <a href="{% url 'workflow-info-version' workflow_id=workflow.workflow_id version=version.version %}">
+            {{ workflow.workflow_id }} (v{{version.version}})
+          </a>
+        </td>
+        <td>{{ version.version }}</td>
+        <td>{{ version.created_by }}</td>
+        <td>{{ version.time_created }}</td>
+        <td>{{ version.num_patients }}</td>
+      </tr>
+      {% endfor %}
+
+      <script>
+        document.getElementById("details_{{workflow.uid}}").addEventListener('toggle', (event) => {
+          document.getElementById("extra_versions_{{workflow.uid}}").style.visibility = event.target.open ? 'visible' : 'collapse'
+        })
+      </script>
+    </tbody>
     {% endfor %}
 
   </table>
