--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,9 +6,11 @@
 
 {% block content %}
   <section id="login-card" class="card">
-
+    <h1 class="page-title">
+      Welcome
+    </h1>
     <h2 class="page-title">
-      Login
+      Enter Your Credentials
     </h2>
     <form method="post">
       {% csrf_token %}
