--- a/static/css/base.css
+++ b/static/css/base.css
@@ -178,6 +178,7 @@ table tbody:last-child tr:last-child td:last-child {
 
 #dashboard-columns {
     display: flex;
+    align-items: flex-start;
 }
 
 #page-navigation {
