--- a/static/css/base.css
+++ b/static/css/base.css
@@ -239,11 +239,12 @@ h1.logo {
 }
 
 .util-button {
-    position: absolute;
+    position: fixed;
     width: 40px;
     height: 40px;
     bottom: 20px;
     right: 20px;
+    background-color: var(--near-black);
 
     cursor: pointer;
     --bounce: cubic-bezier(.47, 1.64, .41, 1);
