--- a/static/css/base.css
+++ b/static/css/base.css
@@ -160,6 +160,27 @@ table tbody:last-child tr:last-child td:last-child {
     font-size: 14px;
 }
 
+.page-changes {
+    margin-left: 1.5em;
+}
+
+.page-changes>summary {
+    margin-left: -0.75em;
+    color: var(--alrite-green)
+}
+
+.page-changes>p {
+    position: relative;
+    margin: 0 0 0 1em;
+}
+
+.page-changes>p::before {
+    content: "> ";
+    opacity: 0.25;
+    position: absolute;
+    left: -1em;
+}
+
 #login-card {
     margin-top: 50px;
     max-width: 350px;
