data reporting and export to csv is working well now

--- a/templates/workflow_info.html
+++ b/templates/workflow_info.html
@@ -63,6 +63,7 @@ active
 
 <section>
   <h3>Collected Data</h3>
+  <a href="{% url "download" workflow_id=workflow.workflow_id %}">Download data</a>
 </section>
 
 <section class="card">
