created method to invite new users and fixed bugs with data recording

--- a/templates/clinicians.html
+++ b/templates/clinicians.html
@@ -9,6 +9,7 @@ active
   <h2 class="page-title">
     All Clinicians
   </h2>
+  <a href="{% url 'create-invite' %}">Invite Clinician</a>
 </section>
 
 <section class="card">
@@ -36,4 +37,5 @@ active
 
   </table>
 </section>
+
 {% endblock content %}
