--- a/templates/clinicians.html
+++ b/templates/clinicians.html
@@ -6,7 +6,7 @@ active
 
 {% block content %}
 <section>
-  <h2 class="page-title">
+  <h2 class="page-title" style="margin-bottom: 0;">
     All Clinicians
   </h2>
   <a href="{% url 'create-invite' %}">Invite Clinician</a>
